Code cleanup and remove renderworldevent.