@@ -62,10 +62,10 @@ public class EntityBoat extends Entity {
 	}
 
 	protected void entityInit() {
-		this.dataWatcher.addObject(17, new Integer(0));
-		this.dataWatcher.addObject(18, new Integer(1));
-		this.dataWatcher.addObject(19, new Float(0.0F));
-	}
+        this.dataWatcher.addObject(17, Integer.valueOf(0));
+        this.dataWatcher.addObject(18, Integer.valueOf(1));
+        this.dataWatcher.addObject(19, new Float(0.0F));
+    }
 
 	/**+
 	 * Returns a boundingBox used to collide the entity with other
@@ -148,22 +148,22 @@ public class EntityBoat extends Entity {
 				double d4 = d1 - this.posY;
 				double d5 = d2 - this.posZ;
 				double d6 = d3 * d3 + d4 * d4 + d5 * d5;
-				if (d6 <= 1.0D) {
-					return;
-				}
+                if (d6 <= 1.0D) {
+                    return;
+                }
 
-				this.boatPosRotationIncrements = 3;
-			}
+                this.boatPosRotationIncrements = 3;
+            }
 
-			this.boatX = d0;
-			this.boatY = d1;
-			this.boatZ = d2;
-			this.boatYaw = (double) f;
-			this.boatPitch = (double) f1;
-			this.motionX = this.velocityX;
-			this.motionY = this.velocityY;
-			this.motionZ = this.velocityZ;
-		}
+            this.boatX = d0;
+            this.boatY = d1;
+            this.boatZ = d2;
+            this.boatYaw = f;
+            this.boatPitch = f1;
+            this.motionX = this.velocityX;
+            this.motionY = this.velocityY;
+            this.motionZ = this.velocityZ;
+        }
 	}
 
 	/**+
@@ -196,8 +196,8 @@ public class EntityBoat extends Entity {
 
 		for (int i = 0; i < b0; ++i) {
 			double d1 = this.getEntityBoundingBox().minY
-					+ (this.getEntityBoundingBox().maxY - this.getEntityBoundingBox().minY) * (double) (i + 0)
-							/ (double) b0
+                    + (this.getEntityBoundingBox().maxY - this.getEntityBoundingBox().minY) * (double) (i)
+                    / (double) b0
 					- 0.125D;
 			double d3 = this.getEntityBoundingBox().minY
 					+ (this.getEntityBoundingBox().maxY - this.getEntityBoundingBox().minY) * (double) (i + 1)
@@ -217,18 +217,18 @@ public class EntityBoat extends Entity {
 			double d4 = Math.sin((double) this.rotationYaw * 3.141592653589793D / 180.0D);
 
 			for (int j = 0; (double) j < 1.0D + d9 * 60.0D; ++j) {
-				double d5 = (double) (this.rand.nextFloat() * 2.0F - 1.0F);
-				double d6 = (double) (this.rand.nextInt(2) * 2 - 1) * 0.7D;
+                double d5 = this.rand.nextFloat() * 2.0F - 1.0F;
+                double d6 = (double) (this.rand.nextInt(2) * 2 - 1) * 0.7D;
 				if (this.rand.nextBoolean()) {
 					double d7 = this.posX - d2 * d5 * 0.8D + d4 * d6;
 					double d8 = this.posZ - d4 * d5 * 0.8D - d2 * d6;
-					this.worldObj.spawnParticle(EnumParticleTypes.WATER_SPLASH, d7, this.posY - 0.125D, d8,
-							this.motionX, this.motionY, this.motionZ, new int[0]);
+                    this.worldObj.spawnParticle(EnumParticleTypes.WATER_SPLASH, d7, this.posY - 0.125D, d8,
+                            this.motionX, this.motionY, this.motionZ);
 				} else {
 					double d24 = this.posX + d2 + d4 * d5 * 0.7D;
 					double d25 = this.posZ + d4 - d2 * d5 * 0.7D;
-					this.worldObj.spawnParticle(EnumParticleTypes.WATER_SPLASH, d24, this.posY - 0.125D, d25,
-							this.motionX, this.motionY, this.motionZ, new int[0]);
+                    this.worldObj.spawnParticle(EnumParticleTypes.WATER_SPLASH, d24, this.posY - 0.125D, d25,
+                            this.motionX, this.motionY, this.motionZ);
 				}
 			}
 		}
@@ -276,10 +276,10 @@ public class EntityBoat extends Entity {
 			if (this.riddenByEntity instanceof EntityLivingBase) {
 				EntityLivingBase entitylivingbase = (EntityLivingBase) this.riddenByEntity;
 				float f = this.riddenByEntity.rotationYaw + -entitylivingbase.moveStrafing * 90.0F;
-				this.motionX += -Math.sin((double) (f * 3.1415927F / 180.0F)) * this.speedMultiplier
-						* (double) entitylivingbase.moveForward * 0.05000000074505806D;
-				this.motionZ += Math.cos((double) (f * 3.1415927F / 180.0F)) * this.speedMultiplier
-						* (double) entitylivingbase.moveForward * 0.05000000074505806D;
+                this.motionX += -Math.sin(f * 3.1415927F / 180.0F) * this.speedMultiplier
+                        * (double) entitylivingbase.moveForward * 0.05000000074505806D;
+                this.motionZ += Math.cos(f * 3.1415927F / 180.0F) * this.speedMultiplier
+                        * (double) entitylivingbase.moveForward * 0.05000000074505806D;
 			}
 
 			double d11 = Math.sqrt(this.motionX * this.motionX + this.motionZ * this.motionZ);
@@ -334,11 +334,11 @@ public class EntityBoat extends Entity {
 			}
 
 			this.rotationPitch = 0.0F;
-			double d15 = (double) this.rotationYaw;
-			double d18 = this.prevPosX - this.posX;
+            double d15 = this.rotationYaw;
+            double d18 = this.prevPosX - this.posX;
 			double d21 = this.prevPosZ - this.posZ;
 			if (d18 * d18 + d21 * d21 > 0.001D) {
-				d15 = (double) ((float) (MathHelper.func_181159_b(d21, d18) * 180.0D / 3.141592653589793D));
+                d15 = (float) (MathHelper.func_181159_b(d21, d18) * 180.0D / 3.141592653589793D);
 			}
 
 			double d23 = MathHelper.wrapAngleTo180_double(d15 - (double) this.rotationYaw);
