@@ -48,7 +48,7 @@ public class EntityBlaze extends EntityMob {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte) 0));
+        this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
 	}
 
 	/**+
@@ -99,10 +99,10 @@ public class EntityBlaze extends EntityMob {
 		}
 
 		for (int i = 0; i < 2; ++i) {
-			this.worldObj.spawnParticle(EnumParticleTypes.SMOKE_LARGE,
-					this.posX + (this.rand.nextDouble() - 0.5D) * (double) this.width,
-					this.posY + this.rand.nextDouble() * (double) this.height,
-					this.posZ + (this.rand.nextDouble() - 0.5D) * (double) this.width, 0.0D, 0.0D, 0.0D, new int[0]);
+            this.worldObj.spawnParticle(EnumParticleTypes.SMOKE_LARGE,
+                    this.posX + (this.rand.nextDouble() - 0.5D) * (double) this.width,
+                    this.posY + this.rand.nextDouble() * (double) this.height,
+                    this.posZ + (this.rand.nextDouble() - 0.5D) * (double) this.width, 0.0D, 0.0D, 0.0D);
 		}
 
 		super.onLivingUpdate();
