@@ -1,15 +1,14 @@
 package net.minecraft.entity.passive;
 
-import java.util.Calendar;
-
 import net.minecraft.block.Block;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.SharedMonsterAttributes;
-import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.nbt.NBTTagCompound;
 import net.minecraft.util.BlockPos;
 import net.minecraft.util.MathHelper;
 import net.minecraft.world.World;
+
+import java.util.Calendar;
 
 /**+
  * This portion of EaglercraftX contains deobfuscated Minecraft 1.8 source code.
@@ -40,7 +39,7 @@ public class EntityBat extends EntityAmbientCreature {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte) 0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
 	}
 
 	/**+
@@ -132,7 +131,7 @@ public class EntityBat extends EntityAmbientCreature {
 		if (this.getIsBatHanging()) {
 			if (!this.worldObj.getBlockState(blockpos1).getBlock().isNormalCube()) {
 				this.setIsBatHanging(false);
-				this.worldObj.playAuxSFXAtEntity((EntityPlayer) null, 1015, blockpos, 0);
+				this.worldObj.playAuxSFXAtEntity(null, 1015, blockpos, 0);
 			} else {
 				if (this.rand.nextInt(200) == 0) {
 					this.rotationYawHead = (float) this.rand.nextInt(360);
@@ -140,7 +139,7 @@ public class EntityBat extends EntityAmbientCreature {
 
 				if (this.worldObj.getClosestPlayerToEntity(this, 4.0D) != null) {
 					this.setIsBatHanging(false);
-					this.worldObj.playAuxSFXAtEntity((EntityPlayer) null, 1015, blockpos, 0);
+					this.worldObj.playAuxSFXAtEntity(null, 1015, blockpos, 0);
 				}
 			}
 		} else {
@@ -150,8 +149,8 @@ public class EntityBat extends EntityAmbientCreature {
 			}
 
 			if (this.spawnPosition == null || this.rand.nextInt(30) == 0
-					|| this.spawnPosition.distanceSq((double) ((int) this.posX), (double) ((int) this.posY),
-							(double) ((int) this.posZ)) < 4.0D) {
+					|| this.spawnPosition.distanceSq((int) this.posX, (int) this.posY,
+					(int) this.posZ) < 4.0D) {
 				this.spawnPosition = new BlockPos((int) this.posX + this.rand.nextInt(7) - this.rand.nextInt(7),
 						(int) this.posY + this.rand.nextInt(6) - 2,
 						(int) this.posZ + this.rand.nextInt(7) - this.rand.nextInt(7));
@@ -233,7 +232,7 @@ public class EntityBat extends EntityAmbientCreature {
 				return false;
 			}
 
-			return i > this.rand.nextInt(b0) ? false : super.getCanSpawnHere();
+			return i <= this.rand.nextInt(b0) && super.getCanSpawnHere();
 		}
 	}
 
